--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "Rollbar Rails Demo", root_path, :class => 'brand' %>
+<%= link_to "Project-106 Test App", root_path, :class => 'brand' %>
 <ul class="nav">
   <li>
     <a target="_blank" href="https://rollbar.com/demo/">Open Rollbar Demo Project</a>
